--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="container">
 
         </section>
-        <a-camera>
+        <a-camera look-controls="touchEnabled: false">
             <a-cursor scale="0 0 0"></a-cursor>
         </a-camera>
 
