--- a/instruction02.html
+++ b/instruction02.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="container">
+    <section class="container full-height">
         <div id="element">
             <!-- <div class="elements">
                 <img src="./image/logo.png" alt="">
@@ -24,12 +24,13 @@
                 <!-- <p>keep the Hiro marker within your view.</p><br><br> -->
             </div>
             <div class="elements">
-                <img src="image/instruction02.gif" class="instruction" alt="">
+                <h2>1. Point at the red circles<br>2. Tap anywhere on the screen.</h2>
+                <!-- <p>keep the Hiro marker within your view.</p><br><br> -->
             </div>
             <div class="elements">
-                <h2>Yellow ring on the red circle and then tap anywhere on the screen for more information.</h2>
-                <!-- <p>keep the Hiro marker within your view.</p><br><br> -->
-            </div><br>
+                <img src="image/instruction02.gif" class="instruction" alt="">
+            </div>
+            
             <div class="elements btn">
                 <a href="instruction.html">
                     <h2>Back</h2>
