--- a/monument360Ending.html
+++ b/monument360Ending.html
@@ -53,7 +53,7 @@
                     </div>
                 </div> -->
         </section>
-        <a-camera>
+        <a-camera look-controls="touchEnabled: false">
             <a-cursor scale="0 0 0"></a-cursor>
         </a-camera>
 
