--- a/before-locations-map.html
+++ b/before-locations-map.html
@@ -40,6 +40,7 @@
         <div>
             <div>
                 <h2>Map of London before the fire</h2>
+                <img src="./image/02.png" alt="">
             </div>
 
 
@@ -47,12 +48,12 @@
     </section>
 
     
-    <a-scene vr-mode-ui="enabled: false" embedded arjs>
-        <!-- <a-camera id="camera" position="0 2 0">
-            <a-cursor></a-cursor>
-        </a-camera> -->
-        
-        <a-marker preset="hiro">
+    <a-scene vr-mode-ui="enabled: false" embedded arjs="detectionMode: mono_and_matrix; matrixCodeType: 3x3_PARITY65">
+
+        <!-- <a-marker preset="hiro"> -->
+        <!-- <a-marker preset="kanji"> -->
+
+        <a-marker type="barcode" value="24">
 
             <!-- <a-sphere color="#A11B1B" radius="0.7" position="0 0 0" scale="0.5 0.5 0.5" theta-length="90" opacity="0.9"
             segments-height="100" segments-width="100" wireframe="true"
@@ -154,7 +155,7 @@
 
         <!-- <a-entity camera></a-entity> -->
         <a-entity camera id="camera">
-            <a-cursor material="color: yellow" scale="0.7 0.7 0.7"></a-cursor>
+            <a-cursor material="color: white" scale="0.7 0.7 0.7"></a-cursor>
         </a-entity>
 
     <!-- HTML to render as a material. -->
