--- a/cause.html
+++ b/cause.html
@@ -41,15 +41,18 @@
         <div>
             <div>
                 <h2>The beginning</h2>
+                <img src="./image/03.png" alt="">
             </div>
 
 
         </div>
     </section>
-    <a-scene vr-mode-ui="enabled: false" embedded arjs>
+    <a-scene vr-mode-ui="enabled: false" embedded arjs="detectionMode: mono_and_matrix; matrixCodeType: 3x3_PARITY65">
 
+        <!-- <a-marker preset="hiro"> -->
+        <!-- <a-marker preset="kanji"> -->
 
-        <a-marker preset="hiro">
+        <a-marker type="barcode" value="24">
 
 
 
@@ -156,7 +159,7 @@
 
         <!-- <a-entity camera></a-entity> -->
         <a-entity camera id="camera">
-            <a-cursor material="color: yellow" scale="0.7 0.7 0.7"></a-cursor>
+            <a-cursor material="color: white" scale="0.7 0.7 0.7"></a-cursor>
         </a-entity>
 
     </a-scene>
