--- a/london.html
+++ b/london.html
@@ -51,8 +51,9 @@
                     </div>
                 </div> -->
             </section>
-            <a-camera>
+            <a-camera look-controls="touchEnabled: false">
                 <a-cursor scale="0 0 0"></a-cursor>
+
             </a-camera>
 
     </a-scene>
