--- a/new-st-paul02.html
+++ b/new-st-paul02.html
@@ -52,7 +52,7 @@
                     </div>
                 </div> -->
         </section>
-        <a-camera>
+        <a-camera look-controls="touchEnabled: false">
             <a-cursor scale="0 0 0"></a-cursor>
         </a-camera>
 
