--- a/cause.html
+++ b/cause.html
@@ -32,6 +32,7 @@
         src="https://unpkg.com/aframe-particle-system-component@1.0.x/dist/aframe-particle-system-component.min.js"></script>
 
     <link rel="stylesheet" href="style-ar.css">
+    <script src="./script-full-screen.js"></script>
 
 </head>
 
