--- a/monument.html
+++ b/monument.html
@@ -8,6 +8,7 @@
     <title>The Monument</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="./script-full-screen.js"></script>
 </head>
 
 <body>
