--- a/after-fire-description.html
+++ b/after-fire-description.html
@@ -8,6 +8,8 @@
     <title>After the Fire description</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <script src="./script-full-screen.js"></script>
 </head>
 
 <body>
