--- a/index02.html
+++ b/index02.html
@@ -8,6 +8,7 @@
     <title>Landing Page</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="./script-full-screen.js"></script>
 </head>
 
 <body>
