--- a/instruction.html
+++ b/instruction.html
@@ -8,6 +8,7 @@
     <title>Instruction</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="./script-full-screen.js"></script>
 </head>
 
 <body>
