--- a/london-before-map.html
+++ b/london-before-map.html
@@ -8,6 +8,7 @@
     <title>Map of London before the Fire</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="./script-full-screen.js"></script>
 </head>
 
 <body>
