--- a/london-bridge.html
+++ b/london-bridge.html
@@ -8,6 +8,7 @@
     <title>Bridge</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="./script-full-screen.js"></script>
 </head>
 
 <body>
