--- a/monument360Ending.html
+++ b/monument360Ending.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style-ar.css">
+    <script src="./script-full-screen.js"></script>
 
 </head>
 
