--- a/st-paul.html
+++ b/st-paul.html
@@ -8,6 +8,7 @@
     <title>St Paul</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="./script-full-screen.js"></script>
 </head>
 
 <body>
