--- a/whitehall.html
+++ b/whitehall.html
@@ -8,6 +8,7 @@
     <title>Whitehall</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="./script-full-screen.js"></script>
 </head>
 
 <body>
